Added heat map static resources, pushed to production

--- a/MetaDataConverted/HeatMapMetadataDeploy/package.xml
+++ b/MetaDataConverted/HeatMapMetadataDeploy/package.xml
@@ -5,5 +5,14 @@
         <members>CompanyMapControllerTest</members>
         <name>ApexClass</name>
     </types>
+    <types>
+        <members>allCompaniesMap</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>Leaflet</members>
+        <members>LeafletHeat</members>
+        <name>StaticResource</name>
+    </types>
     <version>64.0</version>
 </Package>
